tests/NormalTests/paczka1/small_fuzzy/30806422.err
Error in line 8: MdgV A27 48,6
Error in line 10: MdgV S36 20,3
